Fix image on Safari

--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ body {
     background-position: 50% 50%;
     background-position: center center;
     background-repeat: no-repeat;
-    background-attachment: fixed;
+    background-attachment: scroll;
     background-color: #999;
 }
 
@@ -45,4 +45,5 @@ body {
 
 html {
     scroll-behavior: smooth;
+    -webkit-overflow-scrolling: touch;
 }
